samples/_failures_safe/1761294924_4b926d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d15e6f11.c: In function ‘main’:
./samples/SAFE/__tmp_d15e6f11.c:142: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_d15e6f11.c:141:5: error: expected declaration or statement at end of input
  141 |     for
      |     ^~~
